test/integration/bad/tuples/incomplete1.stan
data {
  tuple( array [ foo ] real , while
